# stable-audio-3

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  checkpoint_steering_analysis.md  install.sh  install_kdb_files_for_pytorch_wheels.sh  install_kdb_files_for_pytorch_wheels_arch.sh  latch_ema_sweep.sh  latch_sweep_train.sh  launch_dora.sh  onset_lr8e5-40e.sh  onset_lr8e5.sh  pyproject.toml  run_gradio.py  test-inference.py
docs/: INFINITE_AUDIO_FIFO.md  onnx-amd-inference.md
docs/guides/: prompting.md
docs/superpowers/plans/: 2026-05-26-latch-sa3-phase1.md  2026-06-19-longform-render.md  2026-06-27-steered-longform-density-sweeps.md
docs/workflows/: autoencoder.md  inference.md  longform.md
optimized/mlx/: README.md  bootstrap.sh  sa3
optimized/mlx/scripts/: benchmark.py
optimized/tensorRT/: install.sh
scripts/: bench_dit_onnx.py  bench_same_onnx.py  control_eval_server.py  decode_onnx.py  dit_control_onnx_infer.py  dit_onnx_infer.py  export_dit_control_onnx.py  export_dit_onnx.py  export_same_onnx.py  fifo_infinite_smoke.py  latch_eval_server.py  latch_validate.py  latent_server_dit_onnx.py  longform_render.py  make_text_cond.py  precache_dit_cond.py  sa3_control_onnx.py  sa3_flowsep.py  sa3_latch_onnx.py  sa3_zerosep_rf.py  submit_control_job.py  submit_latch_job.py  train_lora.py
scripts/latch/: README.md  __init__.py  encode_latch_dataset.py  latch_dataset.py  latch_model.py  latch_targets.py  train_latch.py  verify_latch.py  verify_medium_heads.py
stable_audio_3/: __init__.py  model.py  rocm_env.py
stable_audio_3/data/: dataset.py
stable_audio_3/inference/: fifo_infinite.py  latch_guided.py  latch_targets.py  longform.py
stable_audio_3/interface/: diffusion_cond.py
stable_audio_3/models/: latch.py  transformer.py
stable_audio_3/training/: diffusion.py  utils.py
tests/: conftest.py  test_inference.py  test_latch_dataset.py  test_latch_guided.py  test_latch_model.py  test_latch_multi_guided.py  test_latch_targets.py  test_latch_train_helpers.py  test_longform.py
(+4 files in other folders)
