[project]
name = "stable-audio-3"
version = "0.1.0"
description = "Stable Audio 3: A state-of-the-art open platform for fast, high-quality generated audio and music"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "einops>=0.8.2",
    "einops-exts>=0.0.4",
    "numpy>=2.2.6",
    "packaging>=26.0",
    "safetensors>=0.7.0",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "triton==3.6.0",
    "tqdm>=4.67.3",
    "huggingface-hub>=1.7.1",
    "transformers>=5.8.0",
    "soundfile>=0.13.1",
    "librosa",
    "scipy",
    "torchcodec",
    "ninja",
    "pip",
    "pyyaml",
]

[project.optional-dependencies]
ui = [
  "gradio==6.3.0",
  "matplotlib>=3.10.8",
  "accelerate>=1.13.0",
]

lora = [
  "pytorch_lightning==2.5.5",
  "dill>=0.4.1",
]

# Local ROCm wheels — paths are relative to this pyproject.toml.
# If you move the wheels, update these paths (or switch to absolute).
[tool.uv.sources]
torch       = { path = "./torch-2.10.0+rocm7.2.3.lw.git1a270074-cp313-cp313-linux_x86_64.whl" }
torchaudio  = { path = "./torchaudio-2.10.0+rocm7.2.3.git5047768f-cp313-cp313-linux_x86_64.whl" }
torchvision = { path = "./torchvision-0.25.0+rocm7.2.3.git82df5f59-cp313-cp313-linux_x86_64.whl" }
triton      = { path = "./triton-3.6.0+rocm7.2.3.git4ed88892-cp313-cp313-linux_x86_64.whl" }
# Local torchcodec source (sibling repo, built against the ROCm torch above).
torchcodec  = { path = "../torchcodec" }

[project.scripts]
stable-audio = "stable_audio_3.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = [
    "stable_audio_3/models",
    "stable_audio_3/inference",
    "stable_audio_3/interface",
    "stable_audio_3/data",
    "stable_audio_3/training",
    "optimized",
]
